--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
-*.csharp linguist-detectable=true  
+*.dart linguist-language=Dart
+*.csharp linguist-detectable=false  
 *.java linguist-detectable=false  
 *.js linguist-detectable=false  
 *.html linguist-detectable=false  
