--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 *.cpp linguist-detectable=false
 *.h linguist-detectable=false
 *.dart linguist-detectable=true
+*.cmake linguist-detectable=false
 
 
