--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,15 @@
+*.csharp linguist-detectable=false
+*.java linguist-detectable=false
+*.js linguist-detectable=false
+*.html linguist-detectable=false
+*.xml linguist-detectable=false
 *.cpp linguist-detectable=false
-*.dart linguist-detectable=true
+*.hpp linguist-detectable=false
+*.cxx linguist-detectable=false
+*.hxx linguist-detectable=false
+*.cc linguist-detectable=false
+*.c linguist-detectable=false
+*.h linguist-detectable=false
+CMakeLists.txt linguist-detectable=false
 *.cmake linguist-detectable=false
-
-
+*.dart linguist-detectable=true
